[project]
name = "tutorial-haicon-prologue-day"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.8.1",
    "einops>=0.8.1",
    "gluonts>=0.16.2",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "litmodels>=0.1.8",
    "matplotlib>=3.10.3",
    "orjson>=3.10.18",
    "pytorch-forecasting>=1.4.0",
    "seaborn>=0.13.2",
    "sktime>=0.38.3",
    "statsmodels>=0.14.5",
    "transformers>=4.53.1",
]
